# movie-recommend

./: CLAUDE.md  generate-icons.mjs  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml
public/: manifest.json  sw.js
src/: App.tsx  index.css
src/codecli/: __init__.py  __main__.py  cli.py  config.py  conversation.py
src/codecli/llm/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai_compat.py  registry.py
src/codecli/tool_calling/: __init__.py  prompt_based.py
src/codecli/tools/: __init__.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_search.py  grep_search.py  registry.py
src/codecli/ui/: prompt.py  terminal.py
src/codecli/web/: server.py
src/codecli/web/static/: index.html
src/components/: ApiKeyForm.tsx  DramaCard.tsx  DramaDetailModal.tsx  MoodSearch.tsx  MovieCard.tsx  PreferencesPanel.tsx
src/hooks/: useMovies.ts
src/types/: movie.ts
src/utils/: calendar.ts  moodAnalyzer.ts  notifications.ts  tmdb.ts
tests/: test_smoke.py
