[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-code-agent"
version = "0.1.0"
description = "ローカルPC・オンプレミスサーバー・自社クラウドで動作するAIコーディングアシスタント"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "click>=8.0",
    "python-dotenv>=1.0",
    "prompt-toolkit>=3.0",
    "aiohttp>=3.9",
]

[project.scripts]
codecli = "codecli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codecli"]

[tool.hatch.build.targets.sdist]
include = ["src/codecli"]
